--- a/scss/controls/_controller.scss
+++ b/scss/controls/_controller.scss
@@ -45,6 +45,7 @@
     justify-content: space-around;
     align-items:center;
     height: 130px;
+    min-height: 70px;
     outline:none;
     background-color:rgb(3, 3, 3);
     border-top:4px solid white; 
